--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -12,7 +12,9 @@
                 <th>Raw Material Name</th>
                 <th>Unit</th>
                 <th>Requisition Quantity</th>
+                <th>AvailableQty</th>
                 <th>Issue Quantity</th>
+
                 <th>Status</th>
                 <th>Remarks</th>
                 <th>Entry Date</th>
@@ -32,17 +34,18 @@
                 <td>@item.RawMaterialName</td>
                 <td>@item.UnitName</td>
                 <td>@item.RequisitionQuantity</td>
+                <td class="" style="color:red">@item.AvailableQty</td>
 
                 <td style="width:10%">
-                    <input type="number" class="issueQty form-control form-control-sm " value="0" />
+                    <input type="number" class="issueQty form-control form-control-sm " value="0"  />
                     <span class="error hide">Quantity must be <=available Quantity</span>
                 </td>
                 <td>@item.Status</td>
                 <td>@item.Remarks</td>
-                <td class="hide">@item.UnitID</td>
-                <td class="hide">@item.RawMaterialRequisitionInfoId</td>
-                <td class="hide">@item.RawMaterialRequisitionDetailsId</td>
-                <td class="hide">@item.RawMaterialId</td>
+                <td class="hide unitId" >@item.UnitID</td>
+                <td class="hide infoId">@item.RawMaterialRequisitionInfoId</td>
+                <td class="hide detailsId">@item.RawMaterialRequisitionDetailsId</td>
+                <td class="hide rawMaterialId">@item.RawMaterialId</td>
                 <td>@item.EntryDate</td>
 
 
