--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "SalesReturnList";
+    ViewBag.Title = "SalesReturnCreate";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
