--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-body">
+            <div class="card-body mb-5">
                 <div class="row">
                     <div class="col-md-7" style="border-right:2px solid #f6eaaa">
                         <h5 style="border-bottom:2px solid #f6eaaa">
