--- a/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
@@ -1,1 +1,140 @@
 ﻿
+@{
+    ViewBag.Title = "GetProductwisesalesReport";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+<div class="row text-sm">
+    <div class="col-md-12">
+        <div class="card card-primary card-outline card-outline-tabs" style="margin-top:-20px">
+            <div class="card-header p-0 pt-1 border-bottom-0">
+                <ul class="nav nav-tabs" id="custom-tabs-one" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="custom-tabs-one-ProductWiseSalesReport-tab" data-toggle="pill" href="#custom-tabs-one-ProductWiseSalesReport" role="tab" aria-controls="custom-tabs-one-ProductWiseSalesReport" aria-selected="true">
+                            Product Wise sales Statement Report
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <div class="tab-content" id="custom-tabs-one-tabContent">
+                    <div class="tab-pane fade show active" id="custom-tabs-one-ProductWiseSalesReport" role="tabpanel" aria-labelledby="custom-tabs-one-ProductWiseSalesReport-tab">
+                        <div class="row" style="margin-top:-15px">
+                            <div class="col-md-12">
+                                <div class="card shadow">
+                                    <div class="card-header">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <h5>Search By:</h5>
+                                            </div>
+                                            <div class="col-md-6">
+
+                                            </div>
+                                        </div>
+                                        <div class="row mt-1">
+                                            <div class="col-md-2">
+                                                <label class="control-label font-weight-bold" for="dptFromDate">From Date</label>
+                                                <div class="input-group input-group-sm">
+                                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" />
+                                                    <div class="input-group-prepend cursor-pointer remove-list-date dptFromDate" style="cursor:pointer">
+                                                        <span class="input-group-text">&#10008;</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <label class="control-label font-weight-bold" for="dptToDate">ToDate</label>
+                                                <div class="input-group input-group-sm">
+                                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" />
+                                                    <div class="input-group-prepend cursor-pointer remove-list-date dptToDate" style="cursor:pointer">
+                                                        <span class="input-group-text">&#10008;</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <label class="control-label" for="rptType">Type</label>
+                                                <div class="input-group input-group-sm">
+                                                    <select class="form-control form-control-sm float-right" id="rptType" name="rptType">
+                                                        <option value="PDF">PDF</option>
+                                                        <option value="EXCEL">EXCEL</option>
+                                                    </select>
+                                                    <span class="input-group-append">
+                                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section scripts{
+    <script type="text/javascript">
+
+       
+        var dptFromDate = $("#dptFromDate");
+        var dptToDate = $("#dptToDate");
+        var rptType = $("#rptType");
+       
+
+        $(document).ready(function () {
+
+            //Initialize Select2 Elements
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+            dptFromDate.prop('readonly', true);
+            dptToDate.prop('readonly', true);
+            dptFromDate.css("background-color", "#fff");
+            dptToDate.css("background-color", "#fff");
+            $('#dptFromDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+            $('#dptToDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+
+        })
+
+        $(document).on('click', 'div.remove-date', function () {
+            if ($(this).hasClass("dptToDate")) {
+                if (dptToDate.val() !== '') {
+                    dptToDate.val('');
+                    //LoadDataTable();
+                }
+            }
+            if ($(this).hasClass("dptFromDate")) {
+                if (dptFromDate.val() !== '') {
+                    dptFromDate.val('');
+                    //LoadDataTable();
+                }
+            }
+        })
+
+        $("#btnDownload").click(function () {
+            if (dptFromDate.val() == "" && dptToDate.val() == "" ) {
+                bootbox.alert("Please Select Anyone");
+            }
+            else {
+                window.open("/AgroConfiguration/GetProductwisesalesReportDownload?fromDate=" + dptFromDate.val() + "&toDate=" + dptToDate.val() + "&rptType=" + rptType.val());
+            }
+        })
+
+    </script>
+}
+
