--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -47,9 +47,9 @@
                         <i class="fas fa-eye"></i>
                     </a>
 
-                    <a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="View Detail" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                    @*<a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="View Detail" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
                         <i class="fas fa-money-bill"></i>
-                    </a>
+                    </a>*@
 
                     @*<a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1"></a>*@
                     @*}
