--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -1,1 +1,111 @@
-﻿
+﻿@{
+    ViewBag.Title = "SalesReturnList";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+<div class="row">
+    <div class="col-md-12">
+
+
+
+        <div class="card card-navy">
+
+
+            <div class="card-header" style="text-align: center;">
+                <div class="row">
+                    <div class="col-md-3">
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="text-center text-bold">
+                            Sales Return List
+                        </h5>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create SalesReturn</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body  mb-5" @*style="background-color:#e7f1f6"*@ id="cardWithOutRequisition">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card card-navy">
+                            <div class="card-header">
+                                <div class="row">
+                                    <h4 class="col-md-2">Search By</h4>
+                                    <div class="col-md-3">
+                                        <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By Any" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="col-md-12" id="dataContainer">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+    </div>
+</div>
+
+
+@section scripts{
+
+    <script type="text/javascript">
+
+
+
+        var SearchAny = $("#SearchAny");
+
+
+        $(document).ready(function () {
+
+            $('.select2').select2();
+
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+
+            LoadZoneDataTable()
+        })
+
+        function LoadDataInitializer() {
+            LoadZoneDataTable();
+        }
+
+        SearchAny.keyup(function () {
+            debugger;
+            LoadZoneDataTable()
+        })
+
+        function LoadZoneDataTable() {
+            var data = { flag: "View", name: $.trim(SearchAny.val()) }
+            $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/SalesReturnList', data)).then(function (res, status) {
+                console.log(res);
+                if (status == "success") {
+                    $("#dataContainer").empty();
+                    $("#dataContainer").append(res);
+                }
+            }).fail(function (err) { console.log(err) })
+        }
+
+
+    </script>
+}
