--- a/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
@@ -20,9 +20,9 @@
                                             Raw Material Requsition List
                                         </h5>
                                     </div>
-                                    <div class="col-md-3">
+                                    @*<div class="col-md-3">
                                         <a href="/AgroConfiguration/SaveRequisition" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Requistion</a>
-                                    </div>
+                                    </div>*@
                                 </div>
                             </div>
                         </div>
@@ -40,10 +40,11 @@
                                     <div class="col-md-3">
                                         <label for="txtReqCode" class="control-label font-weight-bold">Status</label>
                                         <select class="form-control form-control-sm" id="ddlStatus">
-                                            <option value="">--Select--</option>
+                                            <option value="">--Search by--</option>
                                             <option value="Pending">Pending</option>
-                                            <option value="Send">Pending</option>
-                                            <option value="Accept">Accept</option>
+                                            <option value="Send">Send</option>
+                                            <option value="Received">Received</option>
+                                            <option value="Rejected">Rejected</option>
 
                                         </select>
 
@@ -74,7 +75,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-12 text-sm" id="dataContainer">
-                                            @{Html.RenderAction("GetRequisition",new {flag="List" });}
+                                            @*@{Html.RenderAction("GetRequisition",new {flag="List" });}*@
                                         </div>
                                     </div>
                                 </div>
@@ -113,7 +114,7 @@
         var dptFromDate = $("#dptFromDate");
         var dptToDate = $("#dptToDate");
         var ddlStatus = $("#ddlStatus");
-        var txtReqCode = $("txtReqCode");
+        var txtReqCode = $("#txtReqCode");
         $(document).ready(function () {
 
             //Initialize Select2 Elements
@@ -155,18 +156,77 @@
                 todayHighlight: true,
                 autoclose: true
             });
+
+            loadRequistion();
         })
 
 
+
+        $(document).on('click', 'div.remove-date', function () {
+            if ($(this).hasClass("dptToDate")) {
+                if (dptToDate.val() !== '') {
+                    dptToDate.val('');
+                    loadRequistion();
+                }
+            }
+            if ($(this).hasClass("dptFromDate")) {
+                if (dptFromDate.val() !== '') {
+                    dptFromDate.val('');
+                    loadRequistion();
+                }
+            }
+            
+        })
+
+        txtReqCode.keyup(function () {
+
+            loadRequistion();
+        });
+
+        ddlStatus.change(function () {
+
+            loadRequistion();
+
+
+        });
+        dptFromDate.change(function () {
+            loadRequistion();
+
+        });
+
+        dptToDate.change(function () {
+            loadRequistion();
+
+        });
+
+
+
+        function loadRequistion() {
+
+            var data = { flag: "list", RequisitonCode: txtReqCode.val(), status: ddlStatus.val(), tdate: dptToDate.val(), fdate: dptFromDate.val() };
+
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetRequisition', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer").fadeOut('500', function () {
+                        $("#dataContainer").empty();
+                        $("#dataContainer").append(res).fadeIn('500');
+                    });
+                }
+            }).fail(function (error) {
+                console.log(error);
+            });
+
+        }
         function ModalOpen() {
-            alert("In Modal");
+     
             $("#modalRequsition").Modal("show")
 
         }
         $(document).on("click", "a.data-item-Details", function (e) {
             e.preventDefault();
 
-            alert("here me");
+  
             $("#dataContainer2").empty();
 
             var infoId = $(this).attr('data-item-Details');
