--- a/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequisitionDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ERPBO.Agriculture.ViewModels.RawMaterialRequisitionDetailsViewModel>
 
 @{ 
-
+    string badge = string.Empty;
     int sl = 0;
 }
 <div class="col-md-12">
@@ -15,7 +15,7 @@
             <th>Issue Quantity</th>
             <th>Status</th>
             <th>Remarks</th>
-            <th>Entry Date</th>
+            @*<th>Entry Date</th>*@
    
 
         </tr>
@@ -26,19 +26,23 @@
         {
             foreach (var item in Model)
             {
-                sl++;
-                <tr>
-                    <td>@sl</td>
-                    <td>@item.RawMaterialName</td>
-                    <td>@item.UnitName</td>
-                    <td>@item.RequisitionQuantity</td>
-                    <td>@item.IssueQuantity</td>
-                    <td>@item.Status</td>
-                    <td>@item.Remarks</td>
-                    <td>@item.EntryDate</td>
-         
+                badge = item.Status == "Pending" ? "badge bg-warning" : (item.Status == "Send" ? "badge bg-primary" : item.Status == "Received" ? "badge bg-success" : (item.Status == "Reject" ? "badge bg-secondary" : "badge bg-danger"));
 
-                </tr>
+                sl++;
+        <tr>
+            <td>@sl</td>
+            <td class="text-center">@item.RawMaterialName</td>
+            <td class="text-center">@item.UnitName</td>
+            <td class="text-center">@item.RequisitionQuantity</td>
+            <td class="text-center">@item.IssueQuantity</td>
+            <td class="text-center" data-val="@item.Status">
+                <span class="@badge">@item.Status</span>
+            </td>
+            <td class="text-center">@item.Remarks</td>
+            @*<td>@item.EntryDate</td>*@
+
+
+        </tr>
 
             }
 
