--- a/ERPWeb/Views/AgroConfiguration/ReceivedOrCanelIssuedRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ReceivedOrCanelIssuedRawMaterial.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
-<div class="row" style="margin-top:-15px">
+@*<div class="row" style="margin-top:-15px">
     <div class="col-md-12">
         <div class="card card-gray-dark">
             <div class="card-header">
@@ -23,14 +23,14 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <div class="row text-sm">
     <div class="col-md-12" style="margin-top:-10px">
         <div class="card card-navy">
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-8">
-                        <h6 class="card-title">
+                        <h6 class="text-center" >
                             Requisition Information
                         </h6>
                     </div>
