--- a/ERPWeb/Views/AgroConfiguration/UpdateRequistion.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/UpdateRequistion.cshtml
@@ -3,7 +3,7 @@
    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "UpdateRequistion";
 }
-<div class="row" style="margin-top:-15px">
+@*<div class="row" style="margin-top:-15px">
     <div class="col-md-12">
         <div class="card card-gray-dark">
             <div class="card-header">
@@ -23,15 +23,15 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <div class="row text-sm">
     <div class="col-md-12" style="margin-top:-10px">
         <div class="card card-navy">
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-8">
-                        <h6 class="card-title">
-                            Requisition Information
+                        <h6 class="text-center">
+                            Issue Requisition
                         </h6>
                     </div>
                     <div class="col-md-4">
