--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -17,7 +17,7 @@
 
                 <th>Status</th>
                 <th>Remarks</th>
-                <th>Entry Date</th>
+                @*<th>Entry Date</th>*@
 
 
             </tr>
@@ -46,7 +46,7 @@
                 <td class="hide infoId">@item.RawMaterialRequisitionInfoId</td>
                 <td class="hide detailsId">@item.RawMaterialRequisitionDetailsId</td>
                 <td class="hide rawMaterialId">@item.RawMaterialId</td>
-                <td>@item.EntryDate</td>
+                @*<td>@item.EntryDate</td>*@
 
 
             </tr>
