--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoIdForProduction.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoIdForProduction.cshtml
@@ -15,7 +15,7 @@
                 <th>Issue Quantity</th>
                 <th>Status</th>
                 <th>Remarks</th>
-                <th>Entry Date</th>
+                @*<th>Entry Date</th>*@
 
 
             </tr>
@@ -40,7 +40,7 @@
                         <td class="hide">@item.RawMaterialRequisitionInfoId</td>
                         <td class="hide">@item.RawMaterialRequisitionDetailsId</td>
                         <td class="hide">@item.RawMaterialId</td>
-                        <td>@item.EntryDate</td>
+                        @*<td>@item.EntryDate</td>*@
 
 
                     </tr>
